--- a/emissions/resources/common/navbar.html
+++ b/emissions/resources/common/navbar.html
@@ -1,5 +1,7 @@
 <head>
   <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Emissions Calculator</a>
+    <div class="container">
+      <a class="navbar-brand" href="#">Emissions Calculator</a>
+    </div>
   </nav>
 </head>
